--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
 <section id="contact">
   <h3 class="central-title">Contact</h3>
   <div class="img-container">
-    <img src="/Users/rose/Desktop/portfolio-rose /contactme44.png" alt="contact" class="contact-img">
+    <img src="contact38.png" alt="contact" class="contact-img">
   </div>
 </section>
 
