--- a/analyse.html
+++ b/analyse.html
@@ -128,15 +128,21 @@
   <img src="bloc.png" alt="bloc" class="bloc-img">
 </div>
 
-<!-- Image bloc centrée -->
-<div class="imagedemarque">
-  <img src="/Users/rose/Desktop/portfolio-rose /imagedemarque3.png" alt="imagedemarque" class="imagedemarque">
+<!-- Conteneur des deux images -->
+<div class="images-marque">
+
+  <!-- Image analyse de marque -->
+  <div class="image-item">
+    <img src="elleanalysedemarque.png" alt="Image de marque">
+  </div>
+
+  <!-- Image analyse communication -->
+  <div class="image-item">
+    <img src="elleswotanalyse.png" alt="Analyse communication">
+  </div>
+
 </div>
 
-<!-- Image imagecommunication à coté à droite de image bloc -->
-<div class="analysecommunication">
-  <img src="/Users/rose/Desktop/portfolio-rose /analysecommunication2.png" alt="analysecommunication" class="analysecommunication">
-</div>
 
 <!-- Image strateg centrée -->
 <div class="strateg-container">
