--- a/analyse.html
+++ b/analyse.html
@@ -53,10 +53,7 @@
   <!-- Texte au centre -->
   <div class="brand-right">
     <p class="brand-top-text">
-      Isabel Marant incarne une esthétique parisienne singulière : libre, instinctive et
-      inspirée par l’énergie des années 1990. Sa vision se définit par un mélange subtil
-      entre minimalisme, matières authentiques et nonchalance assumée. La marque incarne un style Effortless Chic pour la parisienne qui aspire à un look Bohème-Rock.
-    </p>
+    Isabel Marant représente pour moi une certaine idée de la parisienne : libre, instinctive, presque insaisissable. Son esthétique, nourrie par l’énergie des années 1990, mêle simplicité, matières brutes et une nonchalance naturelle. La marque exprime un effortless chic authentique, à la frontière du bohème et du rock, pensé pour une femme qui affirme son style sans jamais en faire trop. </p>
 
     <h2 class="brand-title">
       ÉTUDE DE MARQUES : <br> ISABEL MARANT
