--- a/analyse.html
+++ b/analyse.html
@@ -129,12 +129,12 @@
 
   <!-- Image analyse de marque -->
   <div class="image-item">
-    <img src="elleanalysedemarque.png" alt="Image de marque">
+    <img src="elleanalysedemarque3.png" alt="Image de marque">
   </div>
 
   <!-- Image analyse communication -->
   <div class="image-item">
-    <img src="elleswotanalyse.png" alt="Analyse communication">
+    <img src="elleswotanalyse2.png" alt="Analyse communication">
   </div>
 
 </div>
