--- a/culture.html
+++ b/culture.html
@@ -18,8 +18,9 @@
   <header class="category-header">
     <h1 class="category-title">Culture</h1>
     <p class="category-description">
-      Découvrez la rubrique culture à travers des analyses, des inspirations et des actualités consacrées aux arts, aux artistes et aux mouvements qui façonnent la créativité et l’expression contemporaine.
-    </p>
+     Dans cette rubrique, la culture se lit comme un miroir de notre époque.
+Livres, images, idées et créations s’y croisent au fil de mes découvertes.
+Un espace pour comprendre ce qui nous influence et ce qui nous transforme.   </p>
   </header>
 
   <!-- Section titre avec ligne -->
