--- a/interviews.html
+++ b/interviews.html
@@ -16,9 +16,9 @@
   <header class="category-header">
     <h1 class="category-title">INTERVIEWS</h1>
     <p class="category-description">
-      Découvrez l’univers de la mode à travers des analyses, des inspirations et des
-      actualités dédiées aux icônes, aux tendances, et aux défilés qui façonnent l’élégance contemporaine.
-    </p>
+      Dans cette rubrique, je prends le temps de rencontrer des voix qui m’interpellent.
+Des échanges sincères, guidés par la curiosité, l’écoute et l’envie de comprendre l’autre.
+Des conversations où l’on parle autant de parcours que de convictions et de ressentis. </p>
   </header>
 
   <!-- Ligne fine + sous-titre -->
