--- a/mode.html
+++ b/mode.html
@@ -16,9 +16,9 @@
   <header class="category-header">
     <h1 class="category-title">MODE</h1>
     <p class="category-description">
-      Découvrez l’univers de la mode à travers des analyses, des inspirations et des
-      actualités dédiées aux icônes, aux tendances, et aux défilés qui façonnent l’élégance contemporaine.
-    </p>
+     Dans cette rubrique, je parle de mode comme d’une extension de soi.
+Ce que l’on porte, ce que l’on revendique, ce que l’on choisit de montrer ou de taire.
+Un regard subjectif sur les vêtements et les attitudes qui me touchent.</p>
   </header>
 
   <!-- Ligne fine + sous-titre -->
