--- a/tendances.html
+++ b/tendances.html
@@ -16,9 +16,9 @@
   <header class="category-header">
     <h1 class="category-title">TENDANCES</h1>
     <p class="category-description">
-      Découvrez l’univers de la mode à travers des analyses, des inspirations et des
-      actualités dédiées aux icônes, aux tendances, et aux défilés qui façonnent l’élégance contemporaine.
-    </p>
+    Dans cette rubrique, je partage ce qui capte mon attention avant de devenir évident.
+Des intuitions, des mouvements, des détails qui racontent l’époque.
+Une lecture personnelle de ce qui émerge, entre instinct et observation.  </p>
   </header>
 
   <!-- Ligne fine + sous-titre -->
